--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.haojiapplication">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,9 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddBookActivity"></activity>
-        <activity android:name=".BookListActivity"
-            android:label="@string/booklist"/>
+        <activity android:name=".ReasultActivity"></activity>
+        <activity
+            android:name=".BookContentActivity"
+            android:label="@string/mynote"
+            android:windowSoftInputMode="stateHidden|adjustPan" />
+        <activity android:name=".AddBookActivity" />
+        <activity
+            android:name=".BookListActivity"
+            android:label="@string/booklist" />
         <activity android:name=".Picture" />
         <activity
             android:name=".MainActivity"
